remove grid optimization

--- a/biome.json
+++ b/biome.json
@@ -30,6 +30,7 @@
       },
       "style": {
         "noNonNullAssertion": "off",
+        "useNumberNamespace": "off",
         "useFilenamingConvention": {
           "level": "error",
           "options": {
