Revert "remove exports from package json"
This reverts commit ed004d53fe14e7a647bdbba564fca9479bcfa33d.

--- a/package.json
+++ b/package.json
@@ -5,11 +5,25 @@
   "type": "module",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./line-intersections": {
+      "import": "./dist/line-intersections.js",
+      "types": "./dist/line-intersections.d.ts"
+    },
+    "./nearest-box": {
+      "import": "./dist/nearest-box.js",
+      "types": "./dist/nearest-box.d.ts"
+    }
+  },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "tsup-node src/index.ts --format esm --dts --sourcemap"
+    "build": "tsup-node src --format esm --dts --sourcemap"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
