--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup-node src --format esm --dts --sourcemap"
+    "build": "tsup-node src --format esm --dts --sourcemap",
+    "format": "biome format . --write",
+    "format:check": "biome format . --check"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
