--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "build": "tsup-node src --format esm --dts --sourcemap",
     "format": "biome format . --write",
-    "format:check": "biome format . --check"
+    "format:check": "biome format . --write"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
